tests/rspack-test/normalCases/errors/load-module-error/test.filter.js
/*
 * Test fails: this.loadModule is not a function
 * The loader API this.loadModule is not implemented yet
 */

module.exports = () => "TODO: https://github.com/web-infra-dev/rspack/issues/3738"

